apps/home-assistant/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant-svc
  namespace: apps
subsets:
  - addresses:
      - ip: 192.168.2.13
    ports:
      - name: http
        port: 8123
        protocol: TCP
