apps/home-assistant/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant-svc
  namespace: apps
  labels:
    kubernetes.io/service-name: home-assistant-svc
addressType: IPv4
ports:
  - name: http
    port: 8123
    protocol: TCP
endpoints:
  - addresses:
      - 192.168.2.13
