apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-svc
  namespace: apps
spec:
  ports:
    - name: http
      port: 8123
      targetPort: 8123
      protocol: TCP
