apps/home-assistant/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-ingressroute
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`smarthome.macbytes.io`)
      kind: Rule
      services:
        - name: home-assistant-svc
          port: 8123
  tls:
    secretName: home-assistant-tls-certificate
